# QC-Project

./: .env  .env.example  .gitignore  QC_RAG_PROMPT_AND_RESPONSE.txt  README.md  app.py  auth_routes.py  database.py  main.py  otp_utils.py  pyproject.toml  requirements.txt
backend/: config.py  main.py
backend/api/: chat_routes.py  otp_routes.py  schemas.py  sensor_routes.py
backend/auth/: auth_utils.py
backend/models/: database.py
backend/rag/: rag_pipeline.py
backend/workflow/: workflow.py
data/: qc_app.db
data/chroma_db/: chroma.sqlite3
evaluation/: evaluation.py
frontend/: app.py
simulator/: data_simulator.py
